[project]
name = "wpr"
version = "2.0.0-b3"
description = "Tool to automate, when possible, the passive reconnaissance performed on a website prior to an assessment."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dnspython>=2.8.0",
    "googlesearch-python>=1.3.0",
    "httpx>=0.28.1",
    "rich>=14.3.3",
    "serpapi>=1.0.2",
    "tldextract>=5.3.1",
    "whoisit>=4.0.3",
]

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "isort>=8.0.1",
    "ruff>=0.15.6",
]

[tool.ruff]
line-length = 320

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wpr"]

[project.scripts]
wpr = "wpr.main:main"
